@@ -38,10 +38,11 @@ from creme.creme_core.core import sorter
 from creme.creme_core.core.entity_cell import EntityCell, EntityCellActions
 from creme.creme_core.core.paginator import FlowPaginator
 from creme.creme_core.forms.listview import ListViewSearchForm
-from creme.creme_core.gui.actions import ActionRegistry
-from creme.creme_core.gui.actions import (
-    action_registry as global_actions_registry,
-)
+from creme.creme_core.gui import actions
+# from creme.creme_core.gui.actions import ActionRegistry
+# from creme.creme_core.gui.actions import (
+#     action_registry as global_actions_registry,
+# )
 from creme.creme_core.gui.view_tag import ViewTag
 from creme.creme_core.models import CremeEntity
 from creme.creme_core.models.entity_filter import (
@@ -84,7 +85,7 @@ class EntitiesList(base.PermissionsMixin, base.TitleMixin, ListView):
 
     Other features :
      - Single & multi UIActions (e.g. 'view', 'edit', ...). See the method
-       'get_actions_registry()' to override the list of actions in a view inheriting this class.
+       'get_action_registry()' to override the list of actions in a view inheriting this class.
      - Buttons (e.g. creation of an entity, CSV export...). See the method
        'get_buttons(self)' to override the displayed button in a view inheriting this class.
      - Additional queries to filter the rows/content (i.e. entities displayed):
@@ -116,7 +117,8 @@ class EntitiesList(base.PermissionsMixin, base.TitleMixin, ListView):
     transient_arg: str = 'transient'
 
     is_popup_view: bool = False
-    actions_registry: ActionRegistry = global_actions_registry
+    # actions_registry: ActionRegistry = global_actions_registry
+    action_registry: actions.ActionRegistry = actions.action_registry
     reload_url_name: str = ''
 
     state_class: type[lv_gui.ListViewState] = lv_gui.ListViewState
@@ -258,12 +260,11 @@ class EntitiesList(base.PermissionsMixin, base.TitleMixin, ListView):
             ct_id=ContentType.objects.get_for_model(model).id,
         )
 
-    def get_actions_registry(self) -> ActionRegistry:
-        """ Get the registry of UIActions.
-
-        @return: Instance of <creme_core.gui.actions.ActionsRegistry>.
-        """
-        return self.actions_registry
+    # def get_actions_registry(self) -> ActionRegistry:
+    def get_action_registry(self) -> actions.ActionRegistry:
+        """Get the registry of UIActions."""
+        # return self.actions_registry
+        return self.action_registry
 
     def get_cells(self, hfilter: HeaderFilter) -> list[EntityCell]:
         cells = hfilter.cells
@@ -273,7 +274,8 @@ class EntitiesList(base.PermissionsMixin, base.TitleMixin, ListView):
                 0,
                 EntityCellActions(
                     model=self.model,
-                    actions_registry=self.get_actions_registry(),
+                    # actions_registry=self.get_actions_registry(),
+                    action_registry=self.get_action_registry(),
                 )
             )
 
