@@ -121,11 +121,13 @@ class RelatedContactsList(EntityRelatedMixin, ContactsList):
     def check_related_entity_permissions(self, entity, user):
         user.has_perm_to_view_or_die(entity)  # NB: entity == event
 
-    def get_actions_registry(self):
+    # def get_actions_registry(self):
+    def get_action_registry(self):
         view_action_class = next(
             (
                 c
-                for c in self.actions_registry.instance_action_classes(model=Contact)
+                # for c in self.actions_registry.instance_action_classes(model=Contact)
+                for c in self.action_registry.instance_action_classes(model=Contact)
                 if (issubclass(c, ViewAction))
             ),
             None
